--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,17 @@ Generated\ Files/
 # NUnit
 *.VisualState.xml
 TestResult.xml
+nunit-*.xml
+
+# Build Results of an ATL Project
+[Dd]ebugPS/
+[Rr]eleasePS/
+dlldata.c
+
+# Benchmark Results
+BenchmarkDotNet.Artifacts/
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
